Add DisallowInStringArgumentsRule and refactor