@@ -1,7 +1,6 @@
 package org.example;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Objects;
 import java.util.Set;
 
@@ -14,11 +13,12 @@ public class CustomRulesDefinition implements RulesDefinition {
     // don't change that because the path is hard coded in CheckVerifier
     private static final String RESOURCE_BASE_PATH = "org/sonar/l10n/java/rules/java";
 
+    // TODO: fix this
     public static final String REPOSITORY_KEY = "org.example";
     public static final String REPOSITORY_NAME = "Example Custom Repository";
 
     // Add the rule keys of the rules which need to be considered as template-rules
-    private static final Set<String> RULE_TEMPLATES_KEY = Collections.emptySet();
+    private static final Set<String> RULE_TEMPLATES_KEY = Set.of("DisallowMethodsRule", "DisallowInStringArgumentsRule");
 
     private final SonarRuntime runtime;
 
@@ -39,10 +39,7 @@ public class CustomRulesDefinition implements RulesDefinition {
         repository.done();
     }
 
-    private static void setTemplates(RulesDefinition.NewRepository repository) {
-        RULE_TEMPLATES_KEY.stream()
-                .map(repository::rule)
-                .filter(Objects::nonNull)
-                .forEach(rule -> rule.setTemplate(true));
+    private static void setTemplates(NewRepository repository) {
+        RULE_TEMPLATES_KEY.stream().map(repository::rule).filter(Objects::nonNull).forEach(rule -> rule.setTemplate(true));
     }
 }
